# clean-dev-dirs

./: .gitignore  Cargo.toml  README.md  hooksmith.yaml
.github/workflows/: analysis.yaml  dependencies.yaml  notify-homebrew-tap.yaml  release.yaml  release_body.md  rust.yaml  tag-on-version-bump.yaml
src/: cleaner.rs  cli.rs  executables.rs  filtering.rs  lib.rs  main.rs  output.rs  scanner.rs
src/config/: execution.rs  file.rs  filter.rs  mod.rs  scan.rs
src/project/: mod.rs  project.rs  projects.rs
src/utils/: mod.rs  size.rs
tests/: integration_tests.rs
