[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities", "filesystem"]
description = "A fast CLI tool for recursively cleaning development build directories (Rust, Node.js, Python, Go, Java/Kotlin, C/C++, Swift, .NET) to reclaim disk space"
edition = "2024"
homepage = "https://github.com/clean-dev-dirs/clean-dev-dirs"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["cli", "cleanup", "build-artifacts", "disk-space", "developer-tools"]
license = "Apache-2.0 OR MIT"
name = "clean-dev-dirs"
readme = "README.md"
repository = "https://github.com/clean-dev-dirs/clean-dev-dirs"
version = "2.8.0"

[lib]
name = "clean_dev_dirs"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "clean-dev-dirs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
glob = "0.3"
regex = "1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
humansize = "2.1.3"
indicatif = "0.17.11"
inquire = "0.7"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
trash = "5.2.5"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27"

[build-dependencies]
hooksmith = "1.16.0"

[lints.rust]
dead_code                     = "warn"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
unused_imports                = "warn"
unused_variables              = "warn"

[lints.clippy]
correctness        = { level = "deny", priority = -1 }
suspicious         = { level = "deny", priority = -1 }
complexity         = { level = "deny", priority = -1 }
perf               = { level = "deny", priority = -1 }
style              = { level = "deny", priority = -1 }
pedantic           = { level = "deny", priority = -1 }
nursery            = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

# For library code
expect_used = "warn"
panic       = "warn"
todo        = "warn"
unwrap_used = "warn"
